Fixes code background-color width on mobile devices

--- a/_sass/milligram/_Code.sass
+++ b/_sass/milligram/_Code.sass
@@ -16,6 +16,6 @@ pre
 
 	& > code
 		border-radius: 0
-		display: block
+		display: inline-block
 		padding: 1rem 1.5rem
 		white-space: pre
